2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_generate),
	(theme_queue_for_thumbnail), (theme_thumbnail_done_cb): update
	for changes in thumbnailer API

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_response_cb), (style_init): don't
	destroy the window on "delete-event"

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_thumbnail_generate), (theme_queue_for_thumbnail),
	(theme_get_selected), (theme_set_custom_from_selected),
	(theme_remove_custom), (theme_thumbnail_done_cb),
	(theme_selection_changed_cb), (theme_custom_cb),
	(theme_details_changed_cb), (themes_init): hook up more of the
	customization functionality; don't unref generated thumbnails
	because they are still held in a cache by the thumbnailer

2007-06-05  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-theme-package.xml.in: move theme package mime type over
	from the theme-manager (closes bug #444336)

2007-06-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init), (desktop_shutdown):
	* appearance-desktop.h:
	* appearance-font.c: (font_init), (font_shutdown):
	* appearance-font.h:
	* appearance-main.c: (main_window_response), (main):
	* appearance-style.c: (style_init), (conv_to_widget_cb),
	(conv_from_widget_cb):
	* appearance-style.h:
	* appearance-themes.c:
	* appearance-themes.h:
	* appearance.h: major resource handling fixup and initial bits
	for handling custom metathemes

2007-05-30  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: fix duplicate mnemonic

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_init), (find_string_in_model),
	(conv_to_widget_cb), (update_color_buttons_from_string): minor
	code simplification/cleanup

2007-05-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list): don't leak thumbnails

2007-05-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list), (conv_to_widget_cb),