@@ -1,3 +1,11 @@
+2007-06-07  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (is_locked_down),
+	(theme_changed_on_disk_cb), (theme_selection_changed_cb),
+	(themes_init): add initial lockdown bits from theme-manager,
+	delete button sensitivity updates, and preliminary support
+	for reacting to metatheme changes
+
 2007-06-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_thumbnail_generate),
